--- a/packages/frontend/src/styles/globals.css
+++ b/packages/frontend/src/styles/globals.css
@@ -6,6 +6,13 @@ body {
     @apply overflow-y-hidden;
 }
 
+.button {
+    @apply btn;
+    @apply border-yellow-500;
+    @apply hover:border-orange-500;
+    justify-content: left;
+}
+
 @layer utilities {
     @layer responsive {
         /* Hide scrollbar for Chrome, Safari, and Opera */
