--- a/packages/frontend/src/styles/globals.css
+++ b/packages/frontend/src/styles/globals.css
@@ -13,6 +13,14 @@ body {
     justify-content: left;
 }
 
+.text-shadow {
+    text-shadow:
+        1px 1px 0 #000,
+        -1px 1px 0 #000,
+        -1px -1px 0 #000,
+        1px -1px 0 #000;
+}
+
 @layer utilities {
     @layer responsive {
         /* Hide scrollbar for Chrome, Safari, and Opera */
